Update post css - change background and fix button text alignment on mobile Some other minor changes

--- a/static/css/articlePage.css
+++ b/static/css/articlePage.css
@@ -8,11 +8,14 @@
     grid-template-rows: 1fr auto;
     grid-template-columns: 1fr;
     box-sizing: border-box;
-    background-image: linear-gradient(45deg, #9b9b9b -30%, #ffffff 50%, #9b9b9b 130%);
+    background: linear-gradient(35deg, rgba(20, 20, 20, 0.5), rgba(20, 20, 20, 0.5));
+    color: silver;
 }
 
 .postTypePage {
-    background-image: linear-gradient(45deg, #9b9b9b -30%, #ffffff 50%, #9b9b9b 130%);
+    background: linear-gradient(35deg, rgba(20, 20, 20, 0.5), rgba(20, 20, 20, 0.5));
+    color: silver;
+    /*background-image: linear-gradient(45deg, #9b9b9b -30%, #ffffff 50%, #9b9b9b 130%);*/
     box-sizing: border-box;
 }
 
@@ -75,7 +78,7 @@
 
 .articleBody h2 {
     background: linear-gradient(45deg, rgba(75, 75, 75, 0.8),
-    rgba(105, 105, 105, 0.8) 50%, rgba(75, 75, 75, 0.8)), #191919;
+        rgba(105, 105, 105, 0.8) 50%, rgba(75, 75, 75, 0.8)), #191919;
     padding: 0 4% 0 4%;
     box-sizing: border-box;
     font-size: 150%;
@@ -148,4 +151,5 @@
     align-items: center;
     padding: 2% 0 2% 0;
     box-sizing: border-box;
+    text-align: center;
 }
