--- a/static/css/siteLayout.css
+++ b/static/css/siteLayout.css
@@ -65,4 +65,23 @@
     grid-area: content;
     /*background-color: #b76c77;*/
     padding-bottom: 1px;
+    background:
+        linear-gradient(35deg,
+            rgba(253, 253, 253, 0.03) 0%, rgba(253, 253, 253, 0.03) 53%,
+            rgba(109, 109, 109, 0.03) 53%, rgba(109, 109, 109, 0.03) 59%,
+            rgba(228, 228, 228, 0.03) 59%, rgba(228, 228, 228, 0.03) 66%,
+            rgba(42, 42, 42, 0.03) 66%, rgba(42, 42, 42, 0.03) 100%),
+        linear-gradient(205deg,
+            rgba(62, 62, 62, 0.03) 0%, rgba(62, 62, 62, 0.03) 31%,
+            rgba(200, 200, 200, 0.03) 31%, rgba(200, 200, 200, 0.03) 41%,
+            rgba(30, 30, 30, 0.03) 41%, rgba(30, 30, 30, 0.03) 47%,
+            rgba(151, 151, 151, 0.03) 47%, rgba(151, 151, 151, 0.03) 60%,
+            rgba(95, 95, 95, 0.03) 60%, rgba(95, 95, 95, 0.03) 100%),
+        linear-gradient(30deg,
+            rgba(7, 7, 7, 0.03) 0%, rgba(7, 7, 7, 0.03) 19%,
+            rgba(63, 63, 63, 0.03) 19%, rgba(63, 63, 63, 0.03) 33%,
+            rgba(175, 175, 175, 0.03) 33%, rgba(175, 175, 175, 0.03) 37%,
+            rgba(244, 244, 244, 0.03) 37%, rgba(244, 244, 244, 0.03) 60%,
+            rgba(177, 177, 177, 0.03) 60%, rgba(177, 177, 177, 0.03) 100%),
+         linear-gradient(90deg, rgb(20, 20, 20), rgb(35, 35, 35));
 }
